k8s/oder-service/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: vk-paints
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: order-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3004
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: vk-paints
spec:
  selector:
    app: order-service
  ports:
  - port: 80
    targetPort: 3004
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: order-service-route
  namespace: vk-paints
spec:
  parentRefs:
  - name: vk-paints-gateway
    namespace: vk-paints
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /orders
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: order-service
      port: 80
